RESOLVED FIXED39876
[v8] Web Inspector: check that ClientMessageLoopAdapter is not 0
https://bugs.webkit.org/show_bug.cgi?id=39876
Summary [v8] Web Inspector: check that ClientMessageLoopAdapter is not 0
Yury Semikhatsky
Reported 2010-05-28 06:57:12 PDT
[v8] Web Inspector: check that ClientMessageLoopAdapter is not 0
Attachments
Patch (1.27 KB, patch)
2010-05-28 07:00 PDT, Yury Semikhatsky
no flags
Yury Semikhatsky
Comment 1 2010-05-28 07:00:48 PDT
Yury Semikhatsky
Comment 2 2010-05-28 07:10:27 PDT
Comment on attachment 57325 [details] Patch Clearing flags on attachment: 57325 Committed r60356: <http://trac.webkit.org/changeset/60356>
Yury Semikhatsky
Comment 3 2010-05-28 07:10:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.