2010-05-28  Yury Semikhatsky  <yurys@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: check that ClientMessageLoopAdapter is not 0 before
        accessing its fileds from inspectedViewClosed method. It may be 0
        if inspector frontend has not been open.
        https://bugs.webkit.org/show_bug.cgi?id=39876

        * src/WebDevToolsAgentImpl.cpp:
        (WebKit::):

Canonical link: https://commits.webkit.org/51399@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60356 268f45cc-cd09-0410-ab3c-d52691b4dbfc